public_html/includes/templates/default.catalog/less/app/listing.less
/* Categories */

.categories.row {
  > *[class^=col-] {
    padding: @default-gutter-size/2;
  }
  .category {
    position: relative;
    overflow: hidden;
    background: @image-whitespace-color;
    border: 1px solid @default-border-color;
    border-radius: @default-border-radius;
    text-align: center;
    transition: all 50ms linear;
    a.link {
      display: block;
      color: inherit;
      text-decoration: none;
    }
    img {
      width: 100%;
      height: auto;
    }
    .caption {
      background: #f2f2f2;
      padding: @default-gutter-size/2 @default-gutter-size;
      color: @default-text-color;
      * {
        color: inherit;
        margin: 0;
      }
    }
  }
}

/* Manufacturers */

.manufacturers.row {
  > *[class^=col-] {
    padding: @default-gutter-size/2;
  }
  .manufacturer {
    position: relative;
    overflow: hidden;
    background: @image-whitespace-color;
    border: 1px solid @default-border-color;
    border-radius: @default-border-radius;
    text-align: center;
    transition: all 50ms linear;
    a.link {
      display: block;
      color: inherit;
      text-decoration: none;
    }
    img {
      width: 100%;
      height: auto;
      padding: @default-gutter-size/2;
    }
    .caption {
      padding: @default-gutter-size / 2;
      background: #f2f2f2;
      color: @default-text-color;
      margin: 0;
    }
  }
}

/* Products */

.products.row {
  > *[class^=col-] {
    padding: @default-gutter-size/2;
  }
  .product {
    overflow: hidden;
    position: relative;
    background: @image-whitespace-color;
    border: 1px solid @default-border-color;
    border-radius: @default-gutter-size/4;
    transition: all 50ms linear;
    a.link {
      display: block;
      color: inherit;
      text-decoration: none;
    }
    .image-wrapper {
      display: inline-block;
      img {
        width: 160px;
        height: auto;
      }
    }
    .sticker {
      position: absolute;
      top: 15px;
      left: -35px;
      width: 125px;
      padding: @default-gutter-size/4 @default-gutter-size/2;
      color: #fff;
      font-size: 12px;
      font-weight: bold;
      text-align: center;
      text-transform: uppercase;
      transform: rotate(-45deg);
      &.new {
        background: rgba(251, 184, 41, 0.85);
      }
      &.sale {
        background: rgba(237, 60, 50, 0.85);
      }
    }
    .info {
      position: absolute;
      top: 0;
      left: 160px + @default-gutter-size;
      padding: @default-gutter-size/4;
    }
    .name {
      display: flex;
      justify-content: center;
      align-content: center;
      flex-direction: column;
      padding: 0 @default-gutter-size/4;
      height: @default-gutter-size * 3;
    }
    .manufacturer {
      padding: 0 @default-gutter-size/4;
      color: lighten(@default-text-color, 25%);
      font-size: 0.9em;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
    .description {
      padding: 0 @default-gutter-size/4;
      margin-top: @default-gutter-size;
    }
    .price-wrapper {
      position: absolute;
      bottom: 0;
      right: 0;
      padding: 0 @default-gutter-size;
      line-height: @default-gutter-size * 3;
      font-size: 1.25em;
      .price {
        font-weight: bold;
        color: #333;
        white-space: nowrap;
      }
      .regular-price {
        color: @default-text-color;
        font-size: 0.75em;
        font-weight: normal;
        white-space: nowrap;
      }
      .campaign-price {
        font-weight: bold;
        color: #cc0000;
        white-space: nowrap;
      }
    }

    &.column {
      text-align: center;
      img {
        width: 100%;
        height: auto;
      }
      .price-wrapper {
        position: initial;
        padding: 0 @default-gutter-size/4;
      }
    }
  }
}

